# assignments-3-and-later-david68cu

./: CMakeLists.txt
assignments/assigment2/: cross-compile.txt
conf/: username.txt
examples/autotest-validate/: autotest-validate-main.c  autotest-validate.c
examples/systemcalls/: systemcalls.c
examples/threading/: threading.c
finder-app/: Makefile  dependencies.sh  finder-test.sh  finder.sh  manual-linux.sh  start-qemu-terminal.sh  writer.c  writer.sh
server/: Makefile  Readme.md  aesdsocket  aesdsocket-start-stop  aesdsocket.c  valgrind-out.txt
student-test/assignment1/: Test_validate_username.c
